# rust-challenge

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
src/: address.rs  config.rs  generator.rs  lib.rs  main.rs  model.rs  pipeline.rs
src/stats/: balances.rs  mod.rs  price_avg.rs  user_stats.rs
src/storage/: clickhouse.rs
tests/: clickhouse_tests.rs  generator_test.rs  stats_test.rs
