[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
clickhouse = { version = "0.12.2", features = ["uuid"] }
tokio = { version = "1", features = ["full"] }
